objects/pse__ProjectVarianceBatch__c.object
<CustomObject>
    <customHelpPage>pse__projectVarianceBatchHelp</customHelpPage>
    <description>Stores the status and details of Project Variance Batch Apex jobs.</description>
    <fields>
        <fullName>pse__ApexJobId__c</fullName>
        <description>Unique identifier for the current batch Apex job.</description>
        <inlineHelpText>Unique identifier for the current batch Apex job.</inlineHelpText>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the batch process record. The batch process record is deleted automatically if the process completes successfully.</description>
        <inlineHelpText>Lookup to the batch process record. The batch process record is deleted automatically if the process completes successfully.</inlineHelpText>
        <label>Batch Process</label>
        <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Project Variance Batches</relationshipLabel>
        <relationshipName>ProcessBatchControl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__NotificationType__c</fullName>
        <description>The type of notification sent when the process completed: Successful, Failure, or Mixed.</description>
        <formula>IF( pse__TotalNumberOfLogs__c = 0, &apos;Undefined&apos;,
    IF ( AND( pse__TotalNumberOfErrors__c=0,pse__TotalNumberOfAborts__c=0,pse__TotalNumberOfExternal__c=0), 
        &apos;Successful&apos;, 
        IF(pse__TotalNumberOfErrors__c = pse__TotalNumberOfLogs__c, 
            &apos;Failure&apos;, 
            IF(pse__TotalNumberOfAborts__c &gt; 0, 
                &apos;Failure&apos;, 
                IF( pse__TotalNumberOfExternal__c &gt; 0, 
                    &apos;Failure&apos;, 
                    &apos;Mixed&apos; 
                ) 
            ) 
        )
    )     
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of notification sent when the process completed: Successful, Failure, or Mixed.</inlineHelpText>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The current status of the batch job: &quot;Processing&quot;, &quot;Complete&quot;, or &quot;Error&quot;.</description>
        <inlineHelpText>The current status of the batch job: &quot;Processing&quot;, &quot;Complete&quot;, or &quot;Error&quot;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__TotalNumberOfAborts__c</fullName>
        <description>The number of logs where Log Type is Abort.</description>
        <inlineHelpText>The number of logs where Log Type is Abort.</inlineHelpText>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>pse__ProjectVarianceBatchLog__c.pse__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>pse__ProjectVarianceBatchLog__c.pse__ProjectVarianceBatch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__TotalNumberOfErrors__c</fullName>
        <description>The number of logs where Log Type is Error.</description>
        <inlineHelpText>The number of logs where Log Type is Error.</inlineHelpText>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>pse__ProjectVarianceBatchLog__c.pse__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>pse__ProjectVarianceBatchLog__c.pse__ProjectVarianceBatch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__TotalNumberOfExternal__c</fullName>
        <description>The number of logs where Log Type is External.</description>
        <inlineHelpText>The number of logs where Log Type is External.</inlineHelpText>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>pse__ProjectVarianceBatchLog__c.pse__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>pse__ProjectVarianceBatchLog__c.pse__ProjectVarianceBatch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__TotalNumberOfLogs__c</fullName>
        <description>The total number of logs.</description>
        <inlineHelpText>The total number of logs.</inlineHelpText>
        <label>Total Number of Logs</label>
        <summaryForeignKey>pse__ProjectVarianceBatchLog__c.pse__ProjectVarianceBatch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project Variance Batch</label>
    <nameField>
        <displayFormat>PVB-{000000}</displayFormat>
        <label>Project Variance Batch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Variance Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>